client/admin-tool/src/css/Stepper.css
.stepper-component {
  width: 350px;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 653px;
  position: relative;
}

.add-stepper-button {
  background-color: var(--lighterpurple);
  color: white;
  font-family: var(--text-font);
  font-size: 18px;
  border: none;
  border-left: none;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  width: 300px;
  height: 40px;
  border-radius: 5px;
  transition: 0.2s ease-out;
}

.add-stepper-button:hover {
  background-color: var(--lightpurple);
  transition: 0.2s ease-in;
  cursor: pointer;
}

.pagination-container {
  width: 300px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.stepper-item-div {
  margin-top: 10px;
  border: 1px solid var(--lightpurple);
  width: 300px;
  height: 100%;
  border-radius: 5px;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  transition: 0.2s ease-out;
}

.active {
  border: 1px solid var(--orange);
  background-color: var(--orange);
}

.stepper-item-div:hover {
  cursor: pointer;
  transition: 0.2s ease-in;
  background-color: var(--darkorange);
}

.stepper-item-div p {
  margin: 10px !important;
  font-size: 18px;
  font-family: var(--text-font);
}

.pagination-box {
  background-color: transparent;
  color: black;
  border-radius: 50%;
  position: absolute;
  bottom: 0;
}

.active-pagination-box {
  background-color: var(--lighterpurple) !important;
  color: white !important;
  border-radius: 50%;
}

.euldjm:last-of-type,
.euldjm:first-of-type,
.euldjm {
  border: none !important;
  display: inline-block !important;
  width: 20px;
  text-align: center;
  height: auto;
  padding: 5px !important;
}

